<?xml version="1.0"?>
<package format="2">
  <name>pc_application</name>
  <version>0.0.1</version>
  <description>
    <p>PROJECT: "Pumpking Carving Robot"</p>
  </description>

  <author>A.C. Buynak</author>
  <maintainer email="buynak.9@osu.edu">A.C. Buynak (AIMS Lab @ The Ohio State University)</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- Python Control -->
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>

</package>
