<?xml version="1.0"?>
<package format="2">
  <name>pc_canvas_locking</name>
  <version>0.0.1</version>
  <description>
    <p>PROJECT: "Pumpking Carving Robot"</p>
  </description>

  <author>A.C. Buynak</author>
  <maintainer email="buynak.9@osu.edu">A.C. Buynak (AIMS Lab @ The Ohio State University)</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>

</package>
