<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pc_support</name>
  <version>0.0.1</version>
  <description>
    <p>Work Cell Description for Jack O Lantern Pumpkin Carving Project</p>
  </description>
  <author>A.C. Buynak</author>
  <maintainer email="buynak.9@osu.edu">A.C. Buynak (AIMS Lab @ The Ohio State University)</maintainer>
  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/acbuynak/pumpkin-carver/issues</url>
  <url type="repository">https://github.com/acbuynak/pumpkin-carver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>aims_wc1_support</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
